--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,9 @@
 @import '~normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
     box-sizing: border-box;
 }
 
@@ -11,6 +13,7 @@ body {
     position: relative;
     background: var(#{--body-background-default});
 }
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
