--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,5 +1,7 @@
 .wrapper {
- display: flex;
- justify-content: space-between;
- margin-bottom: 30px;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 30px;
+
+	@media (max-width: 767px) {}
 }
