--- a/src/pages/Home/components/Days/Days.module.scss
+++ b/src/pages/Home/components/Days/Days.module.scss
@@ -5,12 +5,18 @@
     gap: 19.5px;
     justify-content: flex-start;
     flex-wrap: wrap;
+    margin: 0 auto;
     padding: 20px;
-    width: 100%;
     background-color: var(#{--components-background-default});
     box-shadow: $box-shadow;
     border-radius: 0 0 $border-radius $border-radius;
+
+    @media (max-width: 1240px) {
+        // justify-content: space-around;
+    }
 }
+
+
 
 .card {
     display: flex;
@@ -22,37 +28,44 @@
     width: 149px;
     transition: .3s;
     cursor: pointer;
-    
+
     .day {
         margin-bottom: 7px;
         font-size: 18px;
         color: var(#{--text-color-default});
     }
+
     .day__info {
         font-size: 14px;
         margin-bottom: 12px;
         color: $base-color;
     }
+
     .img {
         margin-bottom: 12px;
-        svg{
+
+        svg {
             width: 48px;
             height: 48px;
         }
     }
+
     .temp__day {
         font-size: 18px;
         color: var(#{--text-color-default});
     }
+
     .temp__night {
         font-size: 13px;
         color: $base-color;
         margin-bottom: 6px;
     }
+
     .info {
         font-size: 13px;
         color: $base-color;
     }
+
     &:hover {
         box-shadow: var(#{--card-shadow-default});
     }
@@ -79,6 +92,7 @@
     justify-content: center;
     cursor: pointer;
 }
+
 .cancel {
     margin-right: 0;
 }
@@ -91,5 +105,5 @@
 }
 
 .tabs__wrapper {
-    display: flex;  
+    display: flex;
 }
